kubernetes/flyway-baseline.yaml
# Flyway baseline migration pod. Will keep spinning until it's connected to the
# database and completed its job.

apiVersion: v1
kind: Pod
metadata:
  name: flyway-baseline
  namespace: banka-2-dev
  labels:
    app:
      flyway-baseline
spec:
  restartPolicy: OnFailure
  containers:
    - name: flyway-baseline
      image: flyway/flyway:9
      command: ["/bin/sh", "-c"]
      args: ["flyway baseline -baselineVersion=0 -url=$url -user=$user -password=$password"]
