kubernetes/mongo.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: banka-2-dev
spec:
  selector:
    app: mongo-svc
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
