kubernetes/otc.yaml
# OTC service.

#TODO change all latest to __COMMIT_HASH__ and all banka-2-dev to __NAMESPACE__
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otc
  name: otc
  namespace: banka-2-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otc
  template:
    metadata:
      labels:
        app: otc
    spec:
      restartPolicy: Always
      containers:
        - image: harbor.k8s.elab.rs/banka-2/otc:latest
          imagePullPolicy: Always
          name: otc
          ports:
            - containerPort: 8080
          command: ["java", "-jar", "app.jar"]
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: otc
  name: otc
  namespace: banka-2-dev
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: otc
  type: ClusterIP
