kubernetes/users.yaml
# Users service.

#TODO change all latest to __COMMIT_HASH__ and all banka-2-dev to __NAMESPACE__
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users
  name: users
  namespace: banka-2-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      restartPolicy: Always
      containers:
        - image: harbor.k8s.elab.rs/banka-2/users:latest
          imagePullPolicy: Always
          name: users
          ports:
            - containerPort: 8080
          command: ["java", "-jar", "app.jar"]
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: users
  name: users
  namespace: banka-2-dev
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: users
  type: ClusterIP
