kubernetes/ingress.yaml
# Ingress for request forwarding.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: banka-2-dev
  name: banka-2-ingress-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - banka-2-dev.k8s.elab.rs
      secretName: banka-2-https-certs
  rules:
    - host: banka-2-dev.k8s.elab.rs
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banka-2-ingress-backend
  namespace: banka-2-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - banka-2-dev.k8s.elab.rs
      secretName: banka-2-https-certs
  rules:
    - host: banka-2-dev.k8s.elab.rs
      http:
        paths:
          - pathType: Prefix
            path: "/backend/users(/|$)(.*)"
            backend:
              service:
                name: users
                port:
                  number: 8080
          - pathType: Prefix
            path: "/backend/main(/|$)(.*)"
            backend:
              service:
                name: main
                port:
                  number: 8081
          - pathType: Prefix
            path: "/backend/otc(/|$)(.*)"
            backend:
              service:
                name: otc
                port:
                  number: 8082
